--- a/package.json
+++ b/package.json
@@ -17,6 +17,15 @@
   },
   "homepage": "https://github.com/Mikhail-Agarkov/reacrjs-mentoring#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
+    "redux": "^4.0.4"
+  },
+  "devDependencies": {
+    "jest": "^24.9.0",
+    "redux-devtools": "^3.5.0"
   }
 }
