--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "ReactJS Global Mentoring Program Q42019",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "build": "webpack --config webpack.prod.js",
+    "dev": "webpack-dev-server --config webpack.dev.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Mikhail-Agarkov/reacrjs-mentoring.git"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Mikhail Agarkov",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/Mikhail-Agarkov/reacrjs-mentoring/issues"
   },
@@ -25,9 +27,22 @@
     "redux": "^4.0.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.7.2",
+    "@babel/preset-env": "^7.7.1",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "css-loader": "^3.2.0",
+    "html-webpack-plugin": "^3.2.0",
+    "inline-source-map": "^0.6.2",
     "jest": "^24.9.0",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
+    "path": "^0.12.7",
     "redux-devtools": "^3.5.0",
+    "style-loader": "^1.0.0",
     "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0",
+    "webpack-merge": "^4.2.2"
   }
 }
