--- a/package.json
+++ b/package.json
@@ -39,11 +39,11 @@
     "html-webpack-plugin": "^3.2.0",
     "inline-source-map": "^0.6.2",
     "jest": "^24.9.0",
-    "less": "^3.10.3",
-    "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.8.0",
+    "node-sass": "^4.13.0",
     "path": "^0.12.7",
     "redux-devtools": "^3.5.0",
+    "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.41.2",
