--- a/jest.config.json
+++ b/jest.config.json
@@ -1,5 +1,20 @@
 {
   "verbose": true,
   "coverageDirectory": "coverage",
-  "testRegex": "((\\.|/*.)(spec))\\.js?$"
+  "snapshotSerializers": [
+    "enzyme-to-json/serializer"
+  ],
+  "coveragePathIgnorePatterns": [
+    "ErrorBoundary.jsx"
+  ],
+  "setupFiles": [
+    "./src/enzyme.js"
+  ],
+  "moduleNameMapper": {
+    "\\.(css|less|scss|sss|styl)$": "<rootDir>/node_modules/jest-css-modules"
+  },
+  "collectCoverage": true,
+  "collectCoverageFrom": [
+    "src/**/*.{js,jsx}"
+  ]
 }
