--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "webpack --config webpack.prod.js",
     "dev": "webpack-dev-server --config webpack.dev.js",
     "test": "jest --config jest.config.json",
-    "test:watch": "npm run test -- --watch"
+    "test:watch": "npm run test -- --watch",
+    "test:snaps": "npm run test -- --updateSnapshot"
   },
   "repository": {
     "type": "git",
