--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.13.0",
     "path": "^0.12.7",
+    "react-test-renderer": "^16.12.0",
     "redux-devtools": "^3.5.0",
+    "redux-mock-store": "^1.5.3",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
