--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cross-env": "^6.0.3",
     "express": "^4.17.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "isomorphic-fetch": "^2.2.1",
     "query-string": "^6.9.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
@@ -32,6 +33,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
+    "redux-saga": "^0.16.0",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
@@ -42,6 +44,7 @@
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-polyfill": "^6.26.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^0.28.11",
     "enzyme": "^3.10.0",
@@ -64,7 +67,6 @@
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-dev-middleware": "^3.7.2",
-    "webpack-dev-server": "^3.9.0",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-hot-server-middleware": "^0.6.0",
     "webpack-merge": "^4.2.2",
