--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack --config ./webpack",
     "dev": "cross-env NODE_ENV=development  node ./src/server",
+    "lint": "eslint ./ --cache --ignore-pattern .gitignore --fix",
     "test": "jest --config jest.config.json",
     "test:watch": "npm run test -- --watch",
     "test:snaps": "npm run test -- --updateSnapshot"
@@ -41,6 +42,7 @@
     "@babel/plugin-proposal-class-properties": "^7.7.0",
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.7.0",
+    "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
@@ -50,6 +52,11 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "enzyme-to-json": "^3.4.3",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.17.0",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "inline-source-map": "^0.6.2",
