--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint ./ --cache --ignore-pattern .gitignore --fix",
     "test": "jest --config jest.config.json",
     "test:watch": "npm run test -- --watch",
-    "test:snaps": "npm run test -- --updateSnapshot"
+    "test:snaps": "npm run test -- --updateSnapshot",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "repository": {
     "type": "git",
@@ -48,6 +50,12 @@
     "@babel/plugin-proposal-class-properties": "^7.7.0",
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.7.0",
+    "@storybook/addon-actions": "^5.2.8",
+    "@storybook/addon-knobs": "^5.2.8",
+    "@storybook/addon-links": "^5.2.8",
+    "@storybook/addons": "^5.2.8",
+    "@storybook/react": "^5.2.8",
+    "@storybook/theming": "^5.2.8",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
