--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "cross-env NODE_ENV=production webpack --config ./webpack",
     "dev": "cross-env NODE_ENV=development  node ./src/server",
     "lint": "eslint ./ --cache --ignore-pattern .gitignore --fix",
+    "flow": "flow",
     "test": "jest --config jest.config.json",
     "test:watch": "npm run test -- --watch",
     "test:snaps": "npm run test -- --updateSnapshot",
@@ -49,6 +50,7 @@
     "@babel/core": "^7.7.2",
     "@babel/plugin-proposal-class-properties": "^7.7.0",
     "@babel/preset-env": "^7.7.1",
+    "@babel/preset-flow": "^7.7.4",
     "@babel/preset-react": "^7.7.0",
     "@storybook/addon-actions": "^5.2.8",
     "@storybook/addon-knobs": "^5.2.8",
@@ -70,6 +72,8 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.17.0",
     "file-loader": "^4.2.0",
+    "flow-bin": "^0.114.0",
+    "flow-typed": "^2.6.2",
     "html-webpack-plugin": "^3.2.0",
     "inline-source-map": "^0.6.2",
     "jest": "^24.9.0",
